--- a/style.css
+++ b/style.css
@@ -74,3 +74,10 @@ footer {
   font-size: 0.9rem;
   color: #777;
 }
+.center-animation {
+  display: block;
+  margin: 2rem auto;
+  max-width: 100%;
+  height: auto;
+}
+
