--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ footer {
 .center-animation {
   display: block;
   margin: 2rem auto;
-  max-width: 25%;
+  max-width: 200px;
   height: auto;
 }
 
