--- a/pricing.css
+++ b/pricing.css
@@ -99,3 +99,10 @@
   }
 }
 
+.logo-container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
+}
