--- a/pricing.css
+++ b/pricing.css
@@ -105,4 +105,8 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 2rem;
+  height: 60px;
+  width: auto;
+  display: block;
+  margin: 0 auto;
 }
