--- a/pricing.css
+++ b/pricing.css
@@ -100,6 +100,7 @@
 }
 
 .logo-container {
+  margin-top: 60px;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -108,7 +109,6 @@
 }
 
 .logo-container img {
-  margin-top: 2rem;
   height: 60px;  
   width: auto;
   display: block;
