--- a/pricing.css
+++ b/pricing.css
@@ -131,7 +131,11 @@
   margin-top: 2rem;
   width: 100%;
   text-align: center;
-  padding: 1rem 2rem;  
+}
+
+.back-to-home .btn {
+  padding: 1rem 2rem; 
   font-size: 1.25rem;
   border-radius: 25px;
 }
+
