--- a/style.css
+++ b/style.css
@@ -187,7 +187,13 @@ nav {
   height: 40px;
   object-fit: contain;
   display: block;
+  transition: transform 0.5s ease;
 }
+
+  .logo-img:hover {
+  transform: scale(1.05);
+}
+
 .about-us-section {
   text-align: center;
   padding: 4rem 2rem;
@@ -260,3 +266,4 @@ nav {
     display: flex;
   }
 }
+
