added footer to all pages

--- a/style.css
+++ b/style.css
@@ -198,6 +198,8 @@ nav {
   text-align: center;
   padding: 4rem 2rem;
   background: #f9f9f9;
+  margin-bottom: 0;
+  padding-bottom: 5rem;
 }
 
 .about-us-section h2 {
@@ -268,11 +270,12 @@ nav {
 }
 
 footer {
+  position: relative;
   background-color: #111;
-  padding: 2rem 0;
+  padding-top: 4rem;
+  padding: 2rem;
   text-align: center;
-  border-top: 1px solid #222;
-  margin-top: 4rem;
+  border-top: 4rem solid #ffffff;
 }
 
 .footer-content {
@@ -282,8 +285,14 @@ footer {
   gap: 1rem;
 }
 
+
 .footer-logo img {
-  width: 120px;
+  width: 200px;
+  transition : transform 0.5s ease;
+}
+
+.footer-logo img:hover {
+  transform: scale(1.05);
 }
 
 .footer-links {
@@ -306,3 +315,4 @@ footer {
   color: #777;
   font-size: 0.9rem;
 }
+
