--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ footer {
   padding-top: 4rem;
   padding: 2rem;
   text-align: center;
-  border-top: 4rem solid #ffffff;
+  border-top: 4rem solid #f9f9f9;
 }
 
 .footer-content {
