--- a/course.css
+++ b/course.css
@@ -144,3 +144,12 @@ nav ul li a.active {
 }
 
 
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
