--- a/pricing.css
+++ b/pricing.css
@@ -156,3 +156,12 @@
 main {
   flex: 1;
 }
+
+footer {
+  position: relative;
+  background-color: #111;
+  padding-top: 4rem;
+  padding: 2rem;
+  text-align: center;
+  border-top: 4rem solid #ffffff;
+}
