--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 html, body {
   height: 100%;
-}
+  margin: 0;
+  display: flex;
+  flex-direction: column;
 
+}
+main {
+flex: 1;
+
+}
 html {
   scroll-behavior: smooth;
 }
@@ -108,7 +115,6 @@ nav {
   align-items: center;
   justify-content: flex-start;
   background: #ffffff;
-  padding-bottom: 5rem;
 }
 
 .hero img {
@@ -201,6 +207,7 @@ nav {
   padding: 4rem 2rem;
   background: #ffffff;
   margin-bottom: 0;
+  margin-top: 0;
   padding-bottom: 5rem;
 }
 
@@ -279,14 +286,7 @@ footer {
   text-align: center;
   border-top: 4rem solid #f9f9f9;
 }
-footer {
-  position: relative;
-  background-color: #111;
-  padding-top: 4rem;
-  padding: 2rem;
-  text-align: center;
-  border-top: 4rem solid #ffffff;
-}
+
 .footer-content {
   display: flex;
   flex-direction: column;
