--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ nav {
 .hero {
   position: relative;
   width: 100%;
+  margin: 0;
+  padding: 0;
   min-height: 100dvh;
   overflow: hidden;
   display: flex;
@@ -284,7 +286,7 @@ footer {
   padding-top: 4rem;
   padding: 2rem;
   text-align: center;
-  border-top: 4rem solid #f9f9f9;
+  border-top: 4rem solid #ffffff;
 }
 
 .footer-content {
