--- a/pricing.css
+++ b/pricing.css
@@ -1,3 +1,16 @@
+ html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
+main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
  .pricing-title {
   text-align: center;
   margin-top: 2rem;
