--- a/style.css
+++ b/style.css
@@ -123,10 +123,10 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
   z-index: 1;
   user-select: none;
   pointer-events: none;
+  object-fit: contain;
 }
 
 .hero .text {
